<LinearLayout   xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
     android:orientation="vertical" 
    tools:context="${packageName}.${activityClass}" >
    
      
    //第二个linearlayout
   <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp" 
           android:id="@+id/container"
        android:orientation="vertical" 
        android:layout_weight="20">
       
   </LinearLayout>
    
      //第三个LinearLayout
      <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp" 
        android:background="@color/black"
        android:layout_weight="2.5">
						             <Button
						                 android:id="@+id/sbutton"
						               android:layout_width="wrap_content"
						              android:layout_height="match_parent"       
						              android:text="@string/shouye"    
						              android:background="@android:color/transparent"
						              android:textColor="@color/skyblue"
						              android:layout_weight="1"
						            ></Button>
						        <Button
						            android:id="@+id/jbutton"
						               android:layout_width="wrap_content"
						              android:layout_height="match_parent"           
						              android:text="@string/zhangmu"    
						              android:background="@android:color/transparent"
						              android:textColor="@color/white"
						                android:layout_weight="1"
						            ></Button>
						                <Button
						               android:id="@+id/qbutton"
						               android:layout_width="wrap_content"
						              android:layout_height="match_parent"           
						              android:text="@string/qita"    
						              android:textColor="@color/white"
						              android:background="@android:color/transparent"
						                android:layout_weight="1"
						            ></Button>
                 
    </LinearLayout>
    
      
</LinearLayout>