<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
       android:orientation="vertical" 
    tools:context="${packageName}.${activityClass}" >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
         android:gravity="center" 
      android:layout_weight="2"
        android:textSize="15sp"/>
 <View  
	        android:layout_height="1px" 
	        android:background="@color/black" 
	        android:layout_width="fill_parent">
</View>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
         android:gravity="center" 
       android:layout_weight="1"
       android:text="@string/Email"
        android:textSize="15sp"/>
                                                                                                                                   <View  
																																		        android:layout_height="1px" 
																																		        android:background="@color/black" 
																																		        android:layout_width="fill_parent">
																																 </View>
        <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
         android:gravity="center" 
        android:layout_weight="1"
        android:text="@string/wangpan"
        android:textSize="15sp"/>
                                                                                                                                           <View  
																																		        android:layout_height="1px" 
																																		        android:background="@color/black" 
																																		        android:layout_width="fill_parent">
																																 </View>
            <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center" 
        android:layout_weight="1"
        android:text="@string/github"
        android:textSize="15sp"/>
                                                                                                                                               <View  
																																		        android:layout_height="1px" 
																																		        android:background="@color/black" 
																																		        android:layout_width="fill_parent">
																																 </View>
                <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
         android:gravity="center" 
      android:layout_weight="2"
        android:textSize="15sp"/>
</LinearLayout>
