<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

							    <TextView
							        android:id="@+id/textView111"
							        android:layout_width="wrap_content"
							        android:layout_height="wrap_content"
							        android:layout_weight="2" />
																													<View  
																						                                      android:layout_height="1px" 
																													          android:background="@color/black" 
																													         android:layout_width="fill_parent">
																													</View>
							    <Button
							        android:id="@+id/dsharp"
							        android:layout_width="match_parent"
							        android:layout_height="wrap_content"
							        android:layout_weight="1" 
							        android:background="@android:color/transparent"
							        android:text="@string/Dsharp"
							        android:textColor="@color/black" 
							        android:textSize="25sp"
							       />
																																<View  
																																		        android:layout_height="1px" 
																																		        android:background="@color/black" 
																																		        android:layout_width="fill_parent">
																																 </View>
							    <Button
							        android:id="@+id/women"
							        android:layout_width="match_parent"
							        android:layout_height="wrap_content"
							        android:layout_weight="1" 
							          android:background="@android:color/transparent"
							        android:text="@string/women"
							        android:textColor="@color/black" 
							        android:textSize="25sp"/>
																																	<View  
																																		        android:layout_height="1px" 
																																		        android:background="@color/black" 
																																		        android:layout_width="fill_parent">
																																		</View>
							    <Button
							        android:id="@+id/addwomen"
							        android:layout_width="match_parent"
							        android:layout_height="wrap_content"
							        android:layout_weight="1" 
							        android:background="@android:color/transparent"
							        android:text="@string/addwomen" 
							        android:textColor="@color/black" 
							        android:textSize="25sp"/>
																																	<View  
																																				        android:layout_height="1px" 
																																				        android:background="@color/black" 
																																				        android:layout_width="fill_parent">
																																	</View>
							    <TextView
							        android:id="@+id/textView2222"
							        android:layout_width="wrap_content"
							        android:layout_height="wrap_content"
							          android:layout_weight="2"
							        />

</LinearLayout>