<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >
						<LinearLayout 
						android:layout_width="fill_parent"
						android:layout_height="0dp"
						android:layout_weight="6"
						android:orientation="vertical" >
												<TextView
												android:layout_width="fill_parent"
												android:layout_height="0dp"
												android:text="@string/jibenxinxi"
												   android:gravity="center" 
												 android:layout_weight="0.5"></TextView>
																								
																		<View  
											                                      android:layout_height="1px" 
																		          android:background="@color/black" 
																		         android:layout_width="fill_parent">
																		</View>        																																																
																		<LinearLayout 
																		   android:layout_width="fill_parent"
																		   android:layout_height="0dp"
																		   android:layout_weight="1" >
																							<TextView
																							    android:layout_width="0dp"
																							    android:gravity="center" 
																							    android:layout_height="fill_parent"
																							    android:layout_weight="0.5"
																							    android:text="@string/shijian" />
				                                                                           
																							<TextView
																							    android:id="@+id/shijian_text"																							
																							    android:layout_width="0dp"
																							    android:gravity="center" 
																							    android:textSize="15sp"
																							    android:layout_height="fill_parent"
																							    android:layout_weight="1.5"																			
																							    android:ems="10" 
																							     android:background="@drawable/bg_edittext"	
																							    	 >																										    
																							</TextView>																											      																												                                              																			  
																		</LinearLayout>
																		
																		
																				<View  
											                                      android:layout_height="1px" 
																		          android:background="@color/black" 
																		         android:layout_width="fill_parent">
												                               </View>        												
																		 <LinearLayout 
																		  android:layout_width="fill_parent"
																		  android:layout_height="0dp"
																		  android:layout_weight="1"
																		 >
																							<TextView
																							    
																							    android:layout_width="0dp"
																							    android:gravity="center" 
																							    android:layout_height="fill_parent"
																							    android:layout_weight="0.5"
																							    android:text="@string/renwu" />
				                                                                             
																							<EditText
																							    android:id="@+id/renwu_text"
																							    android:singleLine="true"
																							    android:layout_width="0dp"
																							    android:layout_height="fill_parent"
																							    android:layout_weight="1.5"																			
																							    android:ems="10" 
																							     android:background="@drawable/bg_edittext"		
																							    >				
																							    <requestFocus />
																							</EditText>																																	        
																		</LinearLayout>			
																		<View  
											                                      android:layout_height="1px" 
																		          android:background="@color/black" 
																		         android:layout_width="fill_parent">
												                               </View>  																																 																		 	  												                               																		 
																				 <LinearLayout 
																				  android:layout_width="fill_parent"
																				  android:layout_height="0dp"
																				  android:layout_weight="1"
																				 >
																							<TextView
																						        android:layout_width="0dp"
																							    android:gravity="center" 
																							    android:layout_height="fill_parent"
																							    android:layout_weight="0.5"
																							    android:text="@string/didian" />
				                                                                             //ems控制最多显示字符数
																							<EditText
																							    android:id="@+id/didian_text"
																							    android:singleLine="true"
																							    android:layout_width="0dp"
																							    android:layout_height="fill_parent"
																							    android:layout_weight="1.5"																			
																							    android:ems="10" 
																							     android:background="@drawable/bg_edittext"		
																							    > <requestFocus /></EditText>
																		</LinearLayout>
																				 	<View  
											                                      android:layout_height="1px" 
																		          android:background="@color/black" 
																		         android:layout_width="fill_parent">
												                               </View>  
																				 
																				 <LinearLayout 
																		  android:layout_width="fill_parent"
																		  android:layout_height="0dp"
																		  android:layout_weight="2"
																		 >
																							<TextView
																							    
																							    android:layout_width="0dp"
																							    android:gravity="center" 
																							    android:layout_height="fill_parent"
																							    android:layout_weight="0.5"
																							    android:text="@string/beizhu" />
				                                                                             //ems控制最多显示字符数
																							<EditText
																							    
																							    android:id="@+id/beizhu_text"
																							    android:layout_width="0dp"
																							    android:layout_height="fill_parent"
																							    android:layout_weight="1.5"		
																							    android:background="@drawable/bg_edittext"																	
																							    android:ems="10" 
																							    >
				
																							    <requestFocus />
																							</EditText>
																		</LinearLayout>
																			<View  
											                                      android:layout_height="1px" 
																		          android:background="@color/black" 
																		         android:layout_width="fill_parent">
												                               </View>  
																		  <TextView
																		  android:layout_width="fill_parent"
																		  android:layout_height="0dp"
																		   android:gravity="center" 
																		   android:layout_weight="1"></TextView>
																	
							</LinearLayout>
						<Button
						    android:id="@+id/baocun"
						    android:layout_width="fill_parent"
						    android:layout_height="0dp"
						    android:text="@string/baocun" 
						    android:layout_weight="1"
						    android:background="@drawable/bg_alibuybutton"
						    android:gravity="center" 
						    />

</LinearLayout>